gcc-14.2.0/libgo/misc/cgo/errors/testdata/err1.go
version https://git-lfs.github.com/spec/v1
oid sha256:6418001068915064c69b3ad5402ac0d88c5900baa2df9af33fe6af4b96705e2e
size 404
